# akita-fastapi

./: .gitignore  README.md  RELEASE.md  requirements.txt  setup.cfg
akita_fastapi/: testclient.py
