[metadata]
name = akita_fastapi
version = attr: akita_fastapi.__version__
url = https://github.com/akitasoftware/akita-fastapi
author = Cole Schlesinger
author_email = cole@akitasoftware.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
description = Utilities for connecting Akita to FastAPI
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    akita-har
    fastapi
packages = find:
python_requires = >=3.6
